Favs + Admin + Search + Filtration + Rate and Comments + Cache

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -28,6 +29,14 @@
         <activity android:name=".ProfileActivity">
         </activity>
         <activity android:name=".EditProfileActivity">
+        </activity>
+        <activity android:name=".FavoritesActivity">
+        </activity>
+        <activity android:name=".AddDiscActivity">
+        </activity>
+        <activity android:name=".EditDiscActivity">
+        </activity>
+        <activity android:name=".RateDiscActivity">
         </activity>
     </application>
 
